--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "ant-design-vue": "^4.1.1",
     "axios": "^1.7.2",
     "axios-mock-adapter": "^2.1.0",
-    "codemirror": "^6.0.1",
     "dayjs": "^1.11.10",
     "graphql": "^16.11.0",
     "graphql-tag": "^2.12.6",
@@ -37,7 +36,6 @@
     "markdown-it-sub": "^2.0.0",
     "markdown-it-sup": "^2.0.0",
     "marked": "^12.0.0",
-    "md-editor-v3": "^4.12.3",
     "pinia": "^2.1.7",
     "postcss": "^8.5.1",
     "prismjs": "^1.29.0",
@@ -46,10 +44,7 @@
     "tippy.js": "^6.3.7",
     "uuid": "^11.1.0",
     "vue": "^3.3.11",
-    "vue-draggable-plus": "^0.4.0",
-    "vue-router": "4",
-    "vxe-pc-ui": "^4.4.19",
-    "vxe-table": "^4.11.27"
+    "vue-router": "4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.6.2",
